# ZipEnum

./: CMakeLists.txt  LICENSE  README.md
include/: ZipEnum.hpp
sample/: CMakeLists.txt  sample.cpp
